--- a/ImageGallery.API/appsettings.json
+++ b/ImageGallery.API/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "ImageGalleryDBConnectionString": "Server=(localdb)\\mssqllocaldb;Database=ImageGalleryDB;Trusted_Connection=True;"
     }
-  },
-  "AllowedHosts": "*"
 }
