Add more test users and update the port due to a conflicting port

--- a/LCI.IDP/Properties/launchSettings.json
+++ b/LCI.IDP/Properties/launchSettings.json
@@ -10,6 +10,8 @@
   "profiles": {
     "IIS Express": {
       "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:44318",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
