--- a/ImageGallery.Client/ImageGallery.Client.csproj
+++ b/ImageGallery.Client/ImageGallery.Client.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\ImageGallery.Model\ImageGallery.Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="HttpHandlers\" />
+  </ItemGroup>
+
 </Project>
