--- a/LCI.IDP/LCI.IDP.csproj
+++ b/LCI.IDP/LCI.IDP.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
 
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
+
+    <PackageReference Include="TwoStepsAuthenticator" Version="1.4.1" />
   </ItemGroup>
   
   <ItemGroup>
